ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/fields/Commercial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>