ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Nondisclosure Agreement</fullName>
            </value>
            <value>
                <fullName>Other - Not Sales Related</fullName>
            </value>
            <value>
                <fullName>Distribution - Sales</fullName>
            </value>
            <value>
                <fullName>Distribution - Purchase</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>