ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <label>HR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>