ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <label>Operations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>