ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <label>Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>