ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/fields/Second_Chair__c.field-meta.xml
<CustomField>
    <fullName>Second_Chair__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Chair</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>