ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/fields/Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain__c</fullName>
    <label>Supply Chain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>