ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/listViews/Active_Sales_Agreement_Review.listView-meta.xml
<ListView>
    <fullName>Active_Sales_Agreement_Review</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Lead_Negotiator__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Sales Agreement,Distribution - Sales</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>Active Sales Agreement Review</label>
</ListView>