ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/listViews/Contract_Templates.listView-meta.xml
<ListView>
    <fullName>Contract_Templates</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Lead_Negotiator__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Template</value>
    </filters>
    <label>Contract Templates</label>
</ListView>