ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Contract/listViews/In_Process_NDA_Review_v1.listView-meta.xml
<ListView>
    <fullName>In_Process_NDA_Review_v1</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Lead_Negotiator__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Nondisclosure Agreement</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>,Draft,In Approval Process</value>
    </filters>
    <label>In Process NDA Review</label>
</ListView>